--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,10 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
 <%= link_to "Delete #{@task.title}",
-            task_path(@task),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
+  task_path(@task),
+  method: :delete,
+  data: { confirm: "Are you sure?" }
+%>
+<hr>
 <%= link_to 'Back to list', tasks_path %>
+
