--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,15 @@
 <h1>My Tasks</h1>
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.title, task_path(task) %></li>
+    <li>
+      <% if task.completed %>
+        <input type="checkbox" checked>
+        <%= link_to task.title, task_path(task) %>
+      <% else %>
+        <input type="checkbox">
+        <%= link_to task.title, task_path(task) %>
+      <% end %>
+    </li>
   <% end %>
 </ul>
 <hr>
