--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,12 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
-<%= link_to "Delete #{@task.title}",
+<%= link_to "Delete task",
   task_path(@task),
   method: :delete,
   data: { confirm: "Are you sure?" }
 %>
+<%= link_to "Edit task", task_edit_path(@task.id) %>
 <hr>
+<br>
 <%= link_to 'Back to list', tasks_path %>
 
