--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,7 +5,7 @@
   method: :delete,
   data: { confirm: "Are you sure?" }
 %>
-<%= link_to "Edit task", task_edit_path(@task.id) %>
+<%= link_to "Edit task", edit_task_path(@task.id) %>
 <hr>
 <br>
 <%= link_to 'Back to list', tasks_path %>
